M8: the shell — a title, a table, a ledger, and a jungle you can hear
The game now opens on a title screen and closes without you knowing a key.
It waits twenty seconds and then plays itself behind a dimmed jungle until
you touch something. Escape always goes one step back: out of the jungle to
the title, off the title to the desktop. A run that earns a place asks for
three letters and keeps them, with your settings and a lifetime ledger of
everything you have killed and everything that has killed you. And it makes
a noise: squares and noise, synthesised, two channels, no sample files.

- Shell: ui/Shell is a headless, clock-free state machine — title, attract,
  credits, hi-scores, stats, sound, keys, playing, game over, tally, entry —
  so ShellTest walks every state with no window. ShellPainter draws whichever
  screen it is on and decides nothing; GamePainter gathers the jungle's frame
  into one place, so playing, pausing, dying and the demo draw one picture.
  Boot.runGame is wiring and nothing else.
- Data: shell.json (+ schema, ShellValidator) holds every string and beat,
  including which Shell.State each menu key opens — a typo is a DATA ERROR,
  not a dead key. §17.1 gains STATS and SOUND, deliberately: §21.5 asks for a
  stats page, and a setting the player cannot reach is not a setting.
- Player DB: §20.8 in full — temp file, fsync, rolling .bak, atomic move, a
  single-threaded writer that coalesces, and a flush on game over, on a win
  and in a shutdown hook. A file that will not parse or validate is renamed
  *.corrupt-<epoch>, never deleted, and the title says so once. Seeded from
  config/default_highscores.json and config/settings_defaults.json.
- Audio: BeeperSynth (hard-edged squares, a 16-bit LFSR, glide, vibrato, a
  32-sample fade) and Mixer — one line, two channels, addition and clipping.
  Music shares those channels: an effect steals the one the tune is on and the
  tune runs underneath, which is what a one-bit speaker did. No sound card a